--- a/public/views/nerd.html
+++ b/public/views/nerd.html
@@ -2,4 +2,10 @@
     <h1>Nerds and Proud</h1>
 
     <p>{{ tagline }}</p>
+  <form ng-submit="submit()">
+  	Enter text and hit enter:
+  	<input type="text" ng-model="text" name="text" />
+  	<input type="submit" id="submit" value="Submit" />
+  	<pre>list={{list}}</pre>
+	</form>
 </div>
